roles/deploy-traefik/templates/svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: hello2-svc
  labels:
    app: hello2
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:  # Label selector
    app: hello2
             # Service is looking for Pods with the label `app=hello-world`
